syntax = "proto3";

option csharp_namespace = "Payments";

package payService;

service Payer {
  rpc Pay (PayRequest) returns (stream PayResponse);
}

message PayRequest {
  string reference = 1;
}

message PayResponse {
  enum PayStatus {
    FIRST_ACCEPT = 0;
    FIRST_REJECT = 1;
    SECOND_ACCEPT = 2;
    SECOND_REJECT = 3;
    MADE = 4;
    FAILED = 5;
  }
  PayStatus status = 1;
}
